--- a/meta.yaml
+++ b/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - bowtie2
     - lxml
     - numpy
-    - openpyxl
+    - openpyxl <=2.2.5
     - pysam >0.13
     - python 3.*
     - samtools >=1.0
